feat: add NavBar component and update HelloWorld.vue
- Introduced a new NavBar component for improved navigation.
- Removed the project creation card from HelloWorld.vue and replaced it with the NavBar.
- Added a logo image to the assets.
- Updated global styles for better theming and aesthetics.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,4 +10,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-</html>
+  </html>
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.11.5/build/spline-viewer.js"></script>
